--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -1,80 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
-    android:orientation="vertical" >
-    <TextView android:id="@+id/dateField"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:text="Dziś jest: 10.02.2020"
-        android:textColor="@color/design_default_color_primary_dark"/>
-    <TextView android:id="@+id/valueInfo"
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"
-        android:text="Podaj kwotę:"
-        android:textStyle="bold"
-        android:textColor="@color/design_default_color_primary_dark"/>
-    <EditText android:id="@+id/amountInput"
+    android:fillViewport="true">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:focusedByDefault="false"
-        android:text="" />
-    <TextView android:id="@+id/categoryInfo"
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"
-        android:text="Wybierz kategorię:"
-        android:textStyle="bold"
-        android:textColor="@color/design_default_color_primary_dark"/>
-    <Spinner
-        android:id="@+id/categorySelect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown" />
-    <TextView android:id="@+id/subcategoryInfo"
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"
-        android:text="Wybierz podkategorię:"
-        android:textStyle="bold"
-        android:textColor="@color/design_default_color_primary_dark"/>
-    <Spinner
-        android:id="@+id/subcategorySelect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown"/>
-    <TextView android:id="@+id/typeInfo"
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"
-        android:text="Wybierz typ(opcjonalnie):"
-        android:textStyle="bold"
-        android:textColor="@color/design_default_color_primary_dark"/>
-    <Spinner
-        android:id="@+id/typeSelect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/"
-        android:spinnerMode="dropdown"/>
-    <TextView android:id="@+id/commentInfo"
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"
-        android:text="Wprowadź komentarz(opcjonalnie):"
-        android:textStyle="bold"
-        android:textColor="@color/design_default_color_primary_dark"/>
-    <EditText android:id="@+id/commentInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <TextView
+            android:id="@+id/dateField"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Dziś jest: 10.02.2020"
+            android:textColor="@color/design_default_color_primary_dark"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/valueInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Podaj kwotę:"
+            android:textColor="@color/design_default_color_primary_dark"
+            android:textSize="12dp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/amountInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusedByDefault="false"
+            android:inputType="phone"
+            android:textSize="35dp"
+            android:textAlignment="center"
+            android:text="" />
+
+        <TextView
+            android:id="@+id/categoryInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Wybierz kategorię:"
+            android:textColor="@color/design_default_color_primary_dark"
+            android:textSize="12dp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/categorySelect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown" />
+
+        <TextView
+            android:id="@+id/subcategoryInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Wybierz podkategorię:"
+            android:textColor="@color/design_default_color_primary_dark"
+            android:textSize="12dp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/subcategorySelect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown" />
+
+        <TextView
+            android:id="@+id/typeInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Wybierz typ(opcjonalnie):"
+            android:textColor="@color/design_default_color_primary_dark"
+            android:textSize="12dp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/typeSelect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown" />
+
+        <TextView
+            android:id="@+id/commentInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Wprowadź komentarz(opcjonalnie):"
+            android:textColor="@color/design_default_color_primary_dark"
+            android:textSize="12dp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/commentInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="" />
+    </LinearLayout>
+</ScrollView>
