--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:padding="8dp">
 
         <TextView
@@ -33,8 +35,7 @@
             android:id="@+id/amountInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:focusedByDefault="false"
-            android:inputType="phone"
+            android:inputType="numberDecimal|numberSigned"
             android:textSize="35dp"
             android:textAlignment="center"
             android:text="" />
@@ -104,7 +105,6 @@
             android:id="@+id/commentInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:focusedByDefault="false"
             android:text="" />
     </LinearLayout>
 </ScrollView>
